<resources>
    <string name="app_name">mira</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_mrmain">MRMainActivity</string>
    <string name="title_activity_mrtest">MRTestActivity</string>
    <string name="title_activity_mrhistory">MRHistoryActivity</string>
    <string name="title_activity_mrmy">MRMyActivity</string>
    <string name="title_activity_mrindex">MRIndexActivity</string>
    <string name="title_activity_mrfind">MRFindActivity</string>
    <string name="title_activity_mrweb_view">MRWebViewActivity</string>
    <string name="title_activity_mrwelcome">MRWelcomeActivity</string>
    <string name="main_activity_tv_diary">日记</string>
    <string name="main_activity_tv_discover">发现</string>
    <string name="main_activity_tv_test">检测</string>
    <string name="main_activity_tv_my">我的</string>
    <string name="activity_index_camera">camera</string>
    <string name="activity_index_calender">calender</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_activity_tv_login">登    录</string>
    <string name="login_activity_account">账号:</string>
    <string name="login_activity_account_hint">您的手机号</string>
    <string name="login_activity_password">密码:</string>
    <string name="login_activity_password_hint">输入验证码</string>
    <string name="login_activity_get_code">获取验证码</string>
    <string name="login_activity_forget">忘记密码?</string>
    <string name="login_activity_signIn">注册</string>
    <string name="login_activity_third_party_login">第三方账号登录</string>
    <string name="login_activity_weixin_login">微信</string>
    <string name="login_activity_qq_login">QQ</string>
    <string name="login_activity_weibo_login">微博</string>
    <string name="login_activity_desc_arrow_down">朝下展开</string>
    <string name="msg_login_account_null">请输入手机号</string>
    <string name="msg_login_account_invalid">您输入的手机号无效</string>
    <string name="msg_login_loging">正在登录</string>
    <string name="msg_vcode_send_success">验证码已发送，请注意查收</string>
    <string name="msg_vcode_send_fail">验证码发送失败，请检查网络</string>
    <string name="msg_login_pwd_null">请输入验证码</string>
    <string name="title_activity_mrnex">MRNexActivity</string>
    <string name="title_activity_mrinput_account">MRInputAccountActivity</string>
    <string name="title_activity_mrinput_password">MRInputPasswordActivity</string>
    <string name="title_activity_mrcomplete_info">MRCompleteInfoActivity</string>
    <string name="input_account_front_number">+86</string>
    <string name="input_account_comment">请输入您的手机号码，该号码不会对其他人公开</string>
    <string name="inputAccount_activity_tv_title">注册</string>
    <string name="inputAccount_activity_account_hint">手机号</string>
    <string name="input_account_btn_next">下一步</string>
    <string name="input_account_phone_number_null">请输入手机号</string>
    <string name="inputPassword_activity_tv_title">完善信息</string>
    <string name="inputPassword_activity_password_hint">密码，至少六位</string>
    <string name="inputPassword_activity_vcode">验证码</string>
    <string name="inputPassword_btn_next">下一步</string>
    <string name="inputPassword_vcode_is_null">请输入验证码</string>
    <string name="inputPassword_password_is_null">请输入密码</string>
    <string name="completeInfo_activity_title">基本信息</string>
    <string name="completeInfo_activity_uploadPic">上传头像</string>
    <string name="completeInfo_activity_nickName">昵称</string>
    <string name="completeInfo_activity_sex">性别</string>
    <string name="completeInfo_activity_sex_man">男</string>
    <string name="completeInfo_activity_sex_woman">女</string>
    <string name="completeInfo_activity_birthday">生日</string>
    <string name="completeInfo_activity_skinType">皮肤类型</string>
    <string name="completeInfo_activity_complete">完成</string>
    <string name="title_activity_mrgrades_rule">MRGradesRuleActivity</string>
    <string name="btn_back_value">返回</string>
    <string name="gradesRule_activity_title">积分规则</string>
    <string name="gradesRule_activity_rule_title">如何赚取积分?</string>
    <string name="gradesRule_activity_rule_content">积分规则</string>
    <string name="gradesRule_activity_rule_content1">1.签到送积分</string>
    <string name="gradesRule_activity_rule_content2">2.上传自拍照得积分</string>
    <string name="gradesRule_activity_rule_content3">3.分享得积分</string>
    <string name="gradesRule_activity_rule_content4">4.记录我的护肤品得积分</string>
    <string name="title_activity_mruser_info">MRUserInfoActivity</string>
    <string name="title_activity_mrmy_changes">MRMyChangesActivity</string>
    <string name="myChanges_activity_title">我的变化</string>
    <string name="my_changes_activity_del">删除按钮</string>
    <string name="my_changes_activity_hint_value">这里什么也没有</string>
    <string name="my_changes_activity_hint1_value">快去拍张美美的自拍照吧</string>
    <string name="userInfo_activity_title">资料</string>
    <string name="userInfo_activity_user_pic">头像</string>
    <string name="userInfo_activity_user_sign">个性签名</string>
    <string name="userInfo_activity_nick_name">昵称</string>
    <string name="userInfo_activity_sex">性别</string>
    <string name="userInfo_activity_age">年龄</string>
    <string name="userInfo_activity_birthday">生日</string>
    <string name="userInfo_activity_height">身高</string>
    <string name="userInfo_activity_weight">体重</string>
    <string name="userInfo_activity_menses">经期记录</string>
    <string name="userInfo_activity_skin_type">皮肤类型</string>
    <string name="userInfo_activity_skin_sensitivity">是否敏感</string>
    <string name="userInfo_activity_skin_type_test">不知道，去测测</string>
    <string name="userInfo_activity_save">完成</string>
    <string name="index_activity_arrowLeft_desc">朝左</string>
    <string name="index_activity_arrowRight_desc">朝右</string>
    <string name="index_activity_today_result">今日测试结果</string>
    <string name="index_activity_test_changes">我的美丽变化</string>
    <string name="index_activity_test_history">检测历史记录</string>
    <string name="index_activity_my_cream">我的护肤品</string>
    <string name="index_activity_my_mood">我的心情</string>
    <string name="myChanges_activity_lately">最近</string>
    <string name="myChanges_activity_lately_twenty">20张</string>
    <string name="myChanges_activity_lately_fifty">50张</string>
    <string name="myChanges_activity_setting">设置</string>
    <string name="myChanges_activity_share_desc">分享</string>
    <string name="my_activity_title_name">我的</string>
    <string name="my_activity_ibtn_help_desc">帮助</string>
    <string name="my_activity_iv_user_info_userface_desc">头像</string>
    <string name="my_activity_tv_user_info">个人资料</string>
    <string name="my_activity_tv_user_info_change">我的变化</string>
    <string name="my_activity_tv_user_info_history">历史记录</string>
    <string name="my_activity_tv_user_info_moodSaying">心情语录</string>
    <string name="my_activity_tv_user_info_plan">护肤计划</string>
    <string name="my_activity_tv_user_info_shop">积分商城</string>
    <string name="my_activity_tv_user_info_setting">设置</string>
    <string name="my_activity_btn_logout">退出</string>
    <string name="back_exit_tips">再按一次退出系统</string>
    <string name="message_nickName_is_null">请输入昵称</string>
    <string name="title_activity_mrset">MRSetActivity</string>
    <string name="set_activity_title_name">设置</string>
    <string name="set_activity_tv_wifi_upload_pic_value">wifi下上传图片</string>
    <string name="set_activity_tv_gps_value">GPS定位</string>
    <string name="set_activity_tv_alarm_value">闹钟提醒</string>
    <string name="set_activity_tv_weixin_value">微信</string>
    <string name="set_activity_tv_qq_value">QQ</string>
    <string name="set_activity_tv_weibo_value">新浪微博</string>
    <string name="set_activity_tv_suggestion_value">意见反馈</string>
    <string name="set_activity_tv_check_update_value">检测更新</string>
    <string name="set_activity_tv_no_binding">未绑定</string>
    <string name="set_activity_tv_binding">已绑定</string>
    <string name="set_activity_tv_version">当前版本V1.0</string>
    <string name="title_activity_mrcity">MRCityActivity</string>
    <string name="city_activity_title">选择城市</string>
    <string name="city_activity_input">请输入省市中文名称或拼音首字母</string>
    <string name="city_activity_pos_city">定位到的城市：</string>
    <string name="city_activity_search">搜索</string>
    <string name="title_activity_mrdetection">MRDetectionActivity</string>
    <string name="detection_menu_activity_title">检测</string>
    <string name="detection_menu_activity_head_value">额头</string>
    <string name="detection_menu_activity_face_value">脸颊</string>
    <string name="detection_menu_activity_nose_value">鼻子</string>
    <string name="detection_menu_activity_chin_value">下巴</string>
    <string name="detection_menu_acitivity_photo">部位展示图片</string>
    <string name="detection_menu_acitivity_menu">菜单背景图片</string>
    <string name="detection_menu_acitivity_menu_select_part">请选择部位</string>
    <string name="detection_activity_title">检测</string>
    <string name="detection_activity_title_head">额头</string>
    <string name="detection_activity_title_face">脸颊</string>
    <string name="detection_activity_title_nose">鼻子</string>
    <string name="detection_activity_title_chin">下巴</string>
    <string name="detection_activity_history_day">天</string>
    <string name="detection_activity_history_week">周</string>
    <string name="detection_activity_part_result_start">终于见到小主啦，若若好激动呢！让我们一起玩个游戏吧，用美棒按压</string>
    <string name="detection_activity_part_result_end">3~5秒，就会有奇迹发生哦~</string>
    <string name="detection_activity_count_score">综合分值</string>
    <string name="tip_login_error_for_network">对不起,无法登录</string>
    <string name="tip_no_internet">当前没有可用的网络链接</string>
    <string name="soft_update_version">版本更新</string>
    <string name="soft_update_no">恭喜您，已经是最新版本!</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗?</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="soft_update_exception">连接服务器异常，请检查网络！</string>
    <string name="network_exception">您的网络出错啦！</string>
    <string name="title_activity_mrrecommend">MRRecommendActivity</string>
    <string name="recommend_activity_title">若若推荐</string>
    <string name="recommend_activity_type_title">【适用肤质】</string>
    <string name="recommend_activity_method_title">【制作方法】</string>
    <string name="recommend_activity_explain_title">【若若说明】</string>
    <string name="recommend_activity_name1">香蕉面膜</string>
    <string name="recommend_activity_type1">干性、敏感性皮肤</string>
    <string name="recommend_activity_method1">将香蕉半只，去皮捣烂，掺入适量的牛奶，调成厚厚的糊状，敷在脸上，15－20分钟后用温水洗去</string>
    <string name="recommend_activity_explain1">香蕉是热带地区常见的水果，它的营养价值相当高，香蕉富含蛋白质、淀粉质、维生素及矿物质，特别是它含有丰富的钾，对于心脏血管疾病的人是一种非常好的食品。对于肌肤来说，香蕉也是一种很好的面膜材料，它有细嫩皮肤、补水保湿，去除痤疮及雀斑等功效，蕉皮素还能抑制真菌和细菌的滋生，非常适合敏感肌人群</string>
    <string name="recommend_activity_name2">蜂蜜番茄面膜</string>
    <string name="recommend_activity_type2">适用于任何肤质（敏感皮肤除外）</string>
    <string name="recommend_activity_method2">先将番茄压烂取汁，加入适量蜂蜜和少许面粉调成膏状，涂于面部保持20－30分钟，具有使皮肤滋润、白嫩、柔软的作用，长期使用还具有祛斑除皱和治疗皮肤痤疮等功能</string>
    <string name="recommend_activity_explain2">番茄中的番茄红素是一种超强力抗氧化剂，比类胡萝卜素和维生素E还要强大，用来养护皮肤是一种非常好的选择。但要注意番茄也含有较多的AHA酸，可能不利于皮肤敏感人士，因此皮肤敏感者慎用</string>
    <string name="recommend_activity_name3">蜂蜜牛奶滋养面膜</string>
    <string name="recommend_activity_type3">干性皮肤</string>
    <string name="recommend_activity_method3">取新鲜的酸奶100g，加上两茶匙蜂蜜，搅拌均匀后敷在脸上。多余的材料，还可以敷在手背和手臂上，10分钟后洗净即可。每周一到两次，夜间效果更好</string>
    <string name="recommend_activity_explain3">酸奶中含有大量益生菌，其中的乳酸能软化皮肤，有很强的补水、锁水效果，能调节肌肤的水平衡。蜂蜜滋养度高，能增强细胞活力，同时蜂蜜的密封性很强，可以很好地保护皮肤中的水分。酸奶和蜂蜜可称得上是黄金搭配，一起使用，补水、锁水的功效将成倍增长</string>
    <string name="pastRecord_activity_day_view">查看一天</string>
    <string name="pastRecord_activity_year">年</string>
    <string name="pastRecord_activity_month">月</string>
</resources>