<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/userInfo_title"
        style="@style/title"
        android:layout_alignParentTop="true"
        android:background="#81d8cf"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/userInfoBackbtn"
            style="@style/table_back_line"
            android:onClick="back"
            android:visibility="visible" >

            <ImageView style="@style/table_back_image" 
                android:contentDescription="@string/btn_back_value"/>
        </LinearLayout>

        <TextView
            android:id="@+id/userInfo_activity_tv_title"
            style="@style/titletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/userInfo_activity_title"
            android:textColor="@color/white" />
    </RelativeLayout>
    
	<LinearLayout
	    android:id="@+id/userInfo_activity_ll_user_pic"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInfo_title"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="20dp"
        
        >
         <TextView
            android:id="@+id/userInfo_activity_tv_user_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userInfo_activity_user_pic"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
    
	<LinearLayout
	    android:id="@+id/userInfo_activity_ll_user_sign"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInfo_activity_ll_user_pic"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="20dp">
         <TextView
            android:id="@+id/userInfo_activity_tv_user_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/userInfo_activity_user_sign"
            />
         
          <EditText
            android:id="@+id/userInfo_activity_et_user_sign"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:inputType="text"/>
    </LinearLayout>
    
	<LinearLayout
	    android:id="@+id/userInfo_activity_ll_nick_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInfo_activity_ll_user_sign"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="20dp">
         <TextView
            android:id="@+id/userInfo_activity_tv_nick_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/userInfo_activity_nick_name"
            />
         
         <EditText android:id="@+id/userInfo_activity_et_nick_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="text"
            />
    </LinearLayout>
    
	<LinearLayout
	    android:id="@+id/userInfo_activity_ll_border1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInfo_activity_ll_nick_name"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="20dp">
    
		<ImageView
		    android:layout_marginTop="10dp"
	        android:layout_width="fill_parent"  
	        android:layout_height="1dp"  
	        android:background="#D1D1D1"  
	        />
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/userInfo_activity_ll_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInfo_activity_ll_border1"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="20dp">
         <TextView
            android:id="@+id/userInfo_activity_tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/userInfo_activity_sex"
            />
         
           <RadioGroup
            android:id="@+id/userInfo_activity_radioGroup_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:contentDescription="@string/completeInfo_activity_sex" >

            <RadioButton
                android:id="@+id/userInfo_activity_radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completeInfo_activity_sex_man" >
            </RadioButton>

            <RadioButton
                android:id="@+id/userInfo_activity_radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/completeInfo_activity_sex_woman" >
            </RadioButton>
        </RadioGroup>
    </LinearLayout>
    
	<LinearLayout
	    android:id="@+id/userInfo_activity_ll_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInfo_activity_ll_sex"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="20dp"
        >
         <TextView
            android:id="@+id/userInfo_activity_tv_age"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/userInfo_activity_age"
            />
    </LinearLayout>
    
	<LinearLayout
	    android:id="@+id/userInfo_activity_ll_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInfo_activity_ll_age"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="20dp">
         <TextView
            android:id="@+id/userInfo_activity_tv_height"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/userInfo_activity_height"/>
    </LinearLayout>
    
	<LinearLayout
	    android:id="@+id/userInfo_activity_ll_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInfo_activity_ll_height"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="20dp">
         <TextView
            android:id="@+id/userInfo_activity_tv_weight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/userInfo_activity_weight"/>
    </LinearLayout>		
    
	<LinearLayout
	    android:id="@+id/userInfo_activity_ll_border2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInfo_activity_ll_weight"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="20dp"
        >
		<ImageView
		    android:layout_marginTop="10dp"
	        android:layout_width="fill_parent"  
	        android:layout_height="1dp"  
	        android:background="#D1D1D1"/>
	</LinearLayout>
	
		<LinearLayout
	    android:id="@+id/userInfo_activity_ll_menses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInfo_activity_ll_border2"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="20dp">
         <TextView
            android:id="@+id/userInfo_activity_tv_menses"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/userInfo_activity_menses"/>
    </LinearLayout>	
    
	<LinearLayout
	    android:id="@+id/userInfo_activity_ll_skin_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInfo_activity_ll_menses"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="20dp"
        >
         <TextView
            android:id="@+id/userInfo_activity_tv_skin_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/userInfo_activity_skin_type"/>
    </LinearLayout>
    
    <LinearLayout
	    android:id="@+id/userInfo_activity_ll_skin_type_test"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInfo_activity_ll_skin_type"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="20dp"
        >
         <TextView
            android:id="@+id/userInfo_activity_tv_skin_type_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/userInfo_activity_skin_type_test"/>
    </LinearLayout>
    
   	<LinearLayout
        android:id="@+id/userInfo_activity_ll_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userInfo_activity_ll_skin_type_test"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/userInfo_activity_btn_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/userInfo_activity_save" />
    </LinearLayout>

</RelativeLayout>
