<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4f3f2"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/pastRecord_activity_title"
        style="@style/title"
        android:background="#81d8cf"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/pastRecordBackbtn"
            style="@style/table_back_line"
            android:onClick="back"
            android:visibility="visible" >

            <ImageView
                style="@style/table_back_image"
                android:contentDescription="@string/btn_back_value" />
        </LinearLayout>

        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            >
        <TextView
            android:id="@+id/pastRecord_activity_tv_year_title"
            style="@style/titletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/pastRecord_activity_tv_year_title_label"
            style="@style/titletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pastRecord_activity_year"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/pastRecord_activity_tv_month_title"
            style="@style/titletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/pastRecord_activity_tv_month_title_label"
            style="@style/titletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pastRecord_activity_month"
            android:textColor="@color/white" />
        </LinearLayout>
        
        <Button
            android:id="@+id/pastRecordRightBtn"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            android:text="@string/pastRecord_activity_day_view"
            android:textSize="12sp"
            android:textColor="#81d8c8"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="260dp"
        >
       <cn.mira.datepicker.views.DatePicker
           android:id="@+id/pastRecord_activity_DatePicker"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           ></cn.mira.datepicker.views.DatePicker>
    </LinearLayout>
</LinearLayout>
